=== WebKit-412.6.1 ===

2005-06-27  Adele Peterson  <adele@apple.com>
  
       Merged fix for <rdar://problem/4155738> from TOT to Safari-2-0-branch

    2005-05-17  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/4120255> web archives on remote servers can be viewed directly (with major security issues); should download instead

        Reviewed by mjs.

        * WebView.subproj/WebBaseResourceHandleDelegate.h:
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient continueAfterContentPolicy:response:]): if the WebKit client has chosen to "use" a remote web archive, stop the load with an error

2005-06-27  Adele Peterson  <adele@apple.com>

        Merged fix for <rdar://problem/4155736> from TOT to Safari-2-0-branch

    2005-05-17  Chris Blumenberg  <cblu@apple.com>
	
	Fixed: <rdar://problem/4119282> clicking a link in an RTF file opens the link with NSWorkspace without the usual security checks or WebView delegate control

        Reviewed by mjs.

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge loadURL:referrer:reload:userGesture:target:triggeringEvent:form:formValues:]): pass the passed referrer to canLoadURL::: not [self referrer]
        (-[WebBridge postWithURL:referrer:target:data:contentType:triggeringEvent:form:formValues:]): ditto
        * WebView.subproj/WebTextView.m:
        (-[WebTextView clickedOnLink:atIndex:]): call the loadURL bridge method so that security checks are made, command/option clicks work, policy delegate is consulted etc.

=== WebKit-412.6 ===

2005-06-13  Adele Peterson  <adele@apple.com>

        Merged new fix for <rdar://problem/4142247> from TOT to Safari-2-0-branch.

    2005-06-13  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Chris Blumenberg and Adele.

	- better fix for <rdar://problem/4142247> REGRESSION: List to browse widgets at Apple website failed. Closing tab afterwards caused Safari crash
	http://bugzilla.opendarwin.org/show_bug.cgi?id=3445
