@@ -1,3 +1,7 @@
+2005-07-14  Kevin Decker  <kdecker@apple.com>
+
+	Merged fix for <rdar://problem/4122282> clicking a link in an PDF file opens the link with NSWorkspace without the usual security checks or WebView delegate control
+
 === WebKit-412.6.1 ===
 
 2005-06-27  Adele Peterson  <adele@apple.com>
